# bookkeeping-tool

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  dashboard.ts  import.ts  transactions.ts
frontend/src/components/cards/: SummaryCards.tsx
frontend/src/components/charts/: CategoryPieChart.tsx  IncomeExpenseBarChart.tsx
frontend/src/components/filters/: DashboardFilters.tsx
frontend/src/components/tables/: TransactionTable.tsx
frontend/src/components/upload/: ImportUploader.tsx
frontend/src/hooks/: useDashboardData.ts  useTransactions.ts
frontend/src/styles/: app.css
frontend/src/types/: dashboard.ts  transaction.ts
scripts/: build-release.sh  release.sh
server/: run.py
server/bookkeeping/: db.py
server/bookkeeping/cli/: app.py  common.py  import_cmd.py  inspect_cmd.py  query_cmd.py  reset_cmd.py  serve_cmd.py  summary_cmd.py
server/bookkeeping/normalizers/: field_mapping.py  transaction.py
server/bookkeeping/parsers/: csv_parser.py  filename_meta.py  xlsx_parser.py
server/bookkeeping/repositories/: import_batches.py  raw_rows.py  transactions.py
server/bookkeeping/services/: dashboard_service.py  import_service.py  query_service.py  summary_service.py
server/bookkeeping/skill/: handlers.py  schema.py
server/configs/mappings/: xlsx.json
server/web/: api.py  app.py
server/web/static/: index.html
server/web/static/assets/: CategoryPieChart-BoqfJN8n.js  IncomeExpenseBarChart-BnTqhKst.js  antd-BckXsdDW.js  charts-CkPO35_f.js  index-B5u4e7Q6.js  index-DvhiFZXw.css  react-vendor-CiNy3fRy.js
src/bookkeeping_tool/: categories.py  db.py  models.py  run.py
src/bookkeeping_tool/cli/: app.py  budget_cmd.py  common.py  import_cmd.py  inspect_cmd.py  query_cmd.py  record_cmd.py  reset_cmd.py  serve_cmd.py  summary_cmd.py
src/bookkeeping_tool/configs/mappings/: csv.json
src/bookkeeping_tool/normalizers/: field_mapping.py  transaction.py
src/bookkeeping_tool/parsers/: csv_parser.py  filename_meta.py  xlsx_parser.py
src/bookkeeping_tool/repositories/: budgets.py  import_batches.py  raw_rows.py  transactions.py
src/bookkeeping_tool/services/: budget_service.py  import_service.py  record_service.py
src/bookkeeping_tool/web/: api.py  app.py
tests/: test_cli_smoke.py
