[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookkeeping-tool"
version = "0.1.0"
description = "Local bookkeeping data import and normalization tool"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "openpyxl>=3.1.0",
  "pandas>=2.0.0",
  "python-multipart>=0.0.9",
  "typer>=0.12.0",
  "uvicorn[standard]>=0.27.0",
]

[project.scripts]
bookkeeping = "server.bookkeeping.cli.app:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"server.configs.mappings" = ["*.json"]
"server.web.static" = ["index.html", "favicon.svg", "assets/*"]
